--- a/PC/css/new/orderandpay.css
+++ b/PC/css/new/orderandpay.css
@@ -767,7 +767,7 @@ ul.agency_select li:nth-child(3) .ele {
 .orderandpay .infobox01 .con {margin-top:15px;padding-left:8px;}
 .orderandpay .infobox01 dl {line-height:18px;}
 .orderandpay .infobox01 dl dt {font-size: 18px;font-weight: 700;padding-top:24px; line-height: 1.7;float: left; width:180px;margin-bottom: 6px; margin-top:0;background: none;padding-left:0;color:#000000;float: left;}
-.orderandpay .infobox01 dl dd:before {content: ''; display: block; width:720px; height:1px; position: absolute; bottom:0; left:0; background:#DBDBDB;}
+.orderandpay .infobox01 dl dd:before {content: ''; display: block; width:720px; height:1px; position: absolute; bottom:0; left:-210px; background:#DBDBDB;}
 .orderandpay .infobox01 dl dd {font-size: 13px;font-weight: 400;padding-top:24px;  position: relative;  padding-bottom:30px; line-height: 2; width:490px; margin-left:210px; word-break: keep-all;color:#313131;padding-left: 0;}
 .orderandpay .infobox01 dl dd:after {content: ''; display: block; clear: both;}
 .orderandpay .infobox01.type2 {position:relative;margin-top:-1px;border:1px solid #dbdbdb;}
@@ -799,7 +799,7 @@ ul.agency_select li:nth-child(3) .ele {
 .orderandpay .search_box02 .wordlist a {color:#000000; margin-left:15px;}
 
 /*.orderandpay .btn_type01 {height: 19px;line-height: normal;font-size: 13px;vertical-align: middle; background: #EEEEEE;border-radius: 30px;padding: 10px 30px 9px;font-size: 13px;font-weight: 700;color: #000 !important; border-bottom: 0;}*/
-.orderandpay .btn_style11.btn_type01 {padding: 10px 19px 9px; margin-left:-1px; min-height: 38px;min-width: 118px;box-sizing:border-box;background: #EEEEEE;border:1px #B5B5B5 solid;font-size: 13px;font-weight: 500;outline:none;color: #000 !important;display: inline-block;vertical-align: middle;line-height: inherit;}
+.orderandpay .btn_style11.btn_type01 {padding: 9px 19px 10px; margin-left:-1px; min-height: 38px; max-height: 38px;min-width: 118px;box-sizing:border-box;background: #EEEEEE;border:1px #B5B5B5 solid;font-size: 13px;font-weight: 500;outline:none;color: #000 !important;display: inline-block;vertical-align: middle;line-height: inherit;}
 .orderandpay .btn_type07 {font-size: 14px;min-width: 105px;padding: 10px 13px 11px 13px;height: auto;line-height: normal; background: #000; text-align: center;}
 .orderandpay .btn_type03 {height: auto;line-height: normal;font-size: 18px;padding: 14px 0 13px;vertical-align: middle;width: auto;font-weight: 500;letter-spacing: 1.5px;min-width: 200px;background: #000;font-weight: 400;box-sizing: border-box;}
 .orderandpay .btn_style11.btn_type03 { font-size: 13px; min-width: auto; padding: 10px 20px; margin-left: 15px }
