--- a/MOBILE/css/new/orderandpay.css
+++ b/MOBILE/css/new/orderandpay.css
@@ -621,6 +621,72 @@
 .orderandpay .roundbox h3 strong {font-size: 14px;}
 .orderandpay .pull_box.coupon_list_wrap {padding-top:13px;}
 
+/* 일대일 문의 */
+.orderandpay .cs_direct .cs_direct .table02 {
+    height : auto;
+    width  : 96%; 
+    margin : 8px;
+    border : 1px solid #dedede;
+}
+.orderandpay .cs_direct .table02 td, 
+.orderandpay .cs_direct .table02 th{
+    border : 1px solid #dedede;
+}
+.orderandpay .cs_direct .table02 th{
+    background-color: #fafafa;
+    width : 100px; 
+}
+.orderandpay .cs_direct select {
+    width : 200px;
+    max-width : 250px;
+}
+.orderandpay .cs_direct .table02 td, 
+.orderandpay .cs_direct .table02 td > select, 
+.orderandpay .cs_direct .table02 td > input ,
+.orderandpay .cs_direct .table02 td > textarea{
+    padding-left : 10px;
+    padding-right : 10px; 
+    margin-bottom : 7px;
+    padding-top : 5px;
+    background-color: #fff;
+}
+.orderandpay .cs_direct .table02 span{
+    width : 100%;
+}
+.orderandpay .cs_direct .table02 td > input{
+    border:none;border-right:0px; border-top:0px; boder-left:0px; boder-bottom:0px;
+}
+.orderandpay .cs_direct .table02 td > textarea{
+    border:none;border-right:0px; border-top:0px; boder-left:0px; boder-bottom:0px;
+}
+.orderandpay .cs_direct .list_type02{
+    margin-top : 20px;
+}
+.orderandpay .cs_direct .list_type02 li{
+    color: #898989;
+    text-align: center;
+}
+.orderandpay .cs_direct .btn_gray, .btn_orange {
+    width : 180px;
+    height : 40px; 
+}
+.orderandpay .cs_direct .btn_gray{
+    border : 1px solid #dedede;
+}
+.orderandpay .cs_direct .btnorder1{
+    width : 100px;
+    height : 40px;
+    background-color: #ff6600;
+    margin-right : 10px;
+    float: center;
+    margin-top: 0px;
+    margin-bottom: 4px;
+}
+.orderandpay .cs_direct input#order_num, .orderandpay .cs_direct input#p_code{
+    width:180px;
+    margin-bottom:10px;
+}
+
 
 @media screen and (max-width: 360px) {
 
