--- a/MOBILE/css/new/orderandpay.css
+++ b/MOBILE/css/new/orderandpay.css
@@ -644,6 +644,10 @@
 .orderandpay .funding_policy .funding_policy_text_wrap {margin-top:10px; background: #FAFAFA; padding:20px;}
 .orderandpay .funding_policy_list .items {font-size: 13px; font-weight:400; line-height: 1.8;}
 
+/* 상품상세보기 */
+.orderandpay .funding_img_list .items {margin-top:40px;}
+.orderandpay .funding_img_list .items img {display:block; width:100%; height:100%;}
+
 
 @media screen and (max-width: 360px) {
 
