--- a/PC/css/new/orderandpay.css
+++ b/PC/css/new/orderandpay.css
@@ -1235,18 +1235,22 @@ ul.agency_select li:nth-child(3) .ele {
 .orderandpay .funding_main_wrap .funding_main_logo_wrap .funding_title .text_icon:after {content: '';display: inline-block;width:66px;height:76px;background: url(../../images/new/icon_funding_logo.png) no-repeat 0 0;margin: -16px 0px 0px 7px;vertical-align: middle;}
 .orderandpay .funding_main_wrap .funding_main_logo_wrap .funding_desc_texts .text {font-size: 16px; font-weight: 400; color:#777;}
 
-.orderandpay .funding_main_wrap .funding_text_wrap,
-.orderandpay .funding_main_wrap .funding_process_wrap {float: left;}
+.orderandpay .funding_main_wrap .funding_text_wrap {float: left;}
 
-.orderandpay .funding_main_wrap .funding_process_wrap {margin-left:10px;}
+.orderandpay .funding_main_wrap .funding_process_wrap { margin-top: 89px; float: right;}
 .orderandpay .funding_main_wrap .funding_process_wrap .funding_process_list:after {content: ''; display: block; clear: both;}
-.orderandpay .funding_main_wrap .funding_process_wrap .funding_process_list .items {float: left;}
-.orderandpay .funding_main_wrap .funding_process_wrap .funding_process_list .items:before {content: ''; display: block; background: url(../../images/new/icon_funding_process.png) no-repeat 0 0; width:11px; height: 19px;}
+.orderandpay .funding_main_wrap .funding_process_wrap .funding_process_list .items {float: left;position: relative; margin-left:44px;}
+.orderandpay .funding_main_wrap .funding_process_wrap .funding_process_list .items:before {content: ''; display: block; background: url(../../images/new/icon_funding_process.png) no-repeat 0 0; width:11px; height: 19px; position: absolute; top: 50%; margin-top: -10px; left: -24px;}
+.orderandpay .funding_main_wrap .funding_process_wrap .funding_process_list .items:first-child {margin-left:0;}
+.orderandpay .funding_main_wrap .funding_process_wrap .funding_process_list .items:first-child:before {content: ''; display: none;}
 .orderandpay .funding_main_wrap .funding_process_wrap .funding_process_list .items .text_wrap {width:90px; height:90px; border:2px #EDEDED solid; box-sizing: border-box; border-radius:100%; display: table;}
 .orderandpay .funding_main_wrap .funding_process_wrap .funding_process_list .items .text_wrap .unit_text {display: table-cell; vertical-align: middle; text-align: center; font-size: 16px; font-weight: 500; padding:0 20px; line-height: normal;}
 
 .orderandpay .funding_main_wrap .funding_process_wrap .funding_process_list .text_wrap:before {content:''; display: block;}
-.orderandpay .funding_main_wrap .funding_process_wrap .funding_process_list .step1 .text_wrap:before {}
+.orderandpay .funding_main_wrap .funding_process_wrap .funding_process_list .step1 .text_wrap:before {background: url(../../images/new/icon_funding_process_01.png) no-repeat 0 0; width:34px; height: 33px; position: absolute; top: -42px; left: 24px;}
+.orderandpay .funding_main_wrap .funding_process_wrap .funding_process_list .step2 .text_wrap:before {background: url(../../images/new/icon_funding_process_02.png) no-repeat 0 0; width:40px; height: 31px; position: absolute; top: -42px; left: 24px;}
+.orderandpay .funding_main_wrap .funding_process_wrap .funding_process_list .step3 .text_wrap:before {background: url(../../images/new/icon_funding_process_03.png) no-repeat 0 0; width:45px; height: 34px; position: absolute; top: -42px; left: 24px;}
+.orderandpay .funding_main_wrap .funding_process_wrap .funding_process_list .step4 .text_wrap:before {background: url(../../images/new/icon_funding_process_04.png) no-repeat 0 0; width:44px; height: 29px; position: absolute; top: -40px; left: 24px;}
 
 /* 펀딩 탭 */
 .orderandpay .funding_main_wrap .tab1 {margin:0;}
