--- a/PC/css/new/orderandpay.css
+++ b/PC/css/new/orderandpay.css
@@ -1295,7 +1295,7 @@ ul.agency_select li:nth-child(3) .ele {
 .orderandpay .funding_progressbar_wrap {}
 .orderandpay .funding_progressbar_wrap .funding_progressbar {width:100%; height:4px; background: #E0E0E0; position: relative;}
 .orderandpay .funding_progressbar_wrap .funding_progressbar .funding_bar {position: absolute; top:0; left:0; height:4px; background: #D41417; text-align: right; max-width: 100%;}
-.orderandpay .funding_progressbar_wrap .funding_progressbar .funding_bar:before {content: '';display: inline-block;width:34px;height:32px;background: #fff url(../../images/new/ic_heart_funding.png) no-repeat center;padding: 0 8px;margin-top: -13px;}
+.orderandpay .funding_progressbar_wrap .funding_progressbar .funding_bar:before {content: '';display: inline-block;width:52px;height:32px;background: url(../../images/new/ic_heart_funding.png) no-repeat center;margin-top: -14px;}
 
 .orderandpay .funding_goal_price_wrap {}
 .orderandpay .funding_goal_price_wrap .funding_goal_price_type1:after,
