--- a/MOBILE/css/new/orderandpay.css
+++ b/MOBILE/css/new/orderandpay.css
@@ -643,17 +643,52 @@
 .orderandpay .cs_direct .close .btn.btn_black {width:17px; height:17px; font-size: 0; padding:10px; position:absolute; top: 0px;right: 2px; background:url(../../images/new/layer_cs_icon_close.png) no-repeat center center;background-size:17px 17px;}
 .orderandpay .cs_direct .close .btn.btn_black img {display: none !important;}
 .orderandpay .cs_direct .close + .sub_contents div {color:#000 !important;}
+.orderandpay .cs_direct .close + .sub_contents div > div { padding:30px 0;}
 
 .orderandpay .cs_direct .br_list li .fl_l {line-height:1.6 !important;}
 .orderandpay .cs_direct .br_list li .conts {color:#000; border-bottom:1px #000 solid;}
 .orderandpay .cs_direct .btn.btn_type01 {background: #000 !important; border:none !important; font-weight:400 !important;}
-.orderandpay .cs_direct #layer {border-radius:0 none !important;}
+.orderandpay .cs_direct #layer {border-radius:0 !important; border:1px #707070 solid !important; margin:30px; }
+.orderandpay .cs_direct #layer .sub_contents .link {display: block; padding:22px 15px;}
+.orderandpay .cs_direct #layer .sub_contents .link .unit_number {color:#777;}
+.orderandpay .cs_direct #layer .sub_contents .link .unit_product {margin-top:15px; line-height: normal;}
+.orderandpay .cs_direct #layer .sub_contents .link .texts {display: block; font-size: 13px;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .table02 td .link{border:1px #707070 solid; border-top:0; border-bottom: 0;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .table02 td:first-child .link{border-top:1px #707070 solid;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding {padding:0 5px 46px !important;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding.two {padding-left:10px !important;padding-right:10px !important;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding.two .table02 {border-bottom:1px  #707070 solid} 
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .table02 {width:100%;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .btn_delete_choice {width:60px; height:24px; background: #fff; border:1px #777 solid; font-size: 11px;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding div {padding:0;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .detail_wrap { margin-top:28px; }
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .detail_wrap:after {content: ''; display: block; clear:both;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .detail_wrap .img_wrap {width: 120px;height: 120px;overflow: hidden; box-sizing: border-box; position: relative; float: left;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .detail_wrap .img_wrap img {max-width: 100%;    min-height: 100%;    position: relative;    top: 50%;    left: 50%;    transform: translate(-50%,-50%);}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .table02 .choice_wrap {position: relative;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .table02 .choice_wrap label{display:block; width:100%;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .table02 .choice_wrap label:before {position: absolute; top:10px; left:10px; z-index: 1;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .table02 .choice_wrap .unit_text_wrap {float: left; width:calc(100% - 130px); padding-left:10px; text-align: left; line-height: normal;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .table02 .choice_wrap .unit_text_wrap .unit_num {font-size: 11px; font-weight: 500; color:#999 !important; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .table02 .choice_wrap .unit_text_wrap .unit_text {font-size: 14px; font-weight: 400;line-height: 20px;height: 40px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box; -webkit-line-clamp: 2;-webkit-box-orient: vertical;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .table02 .choice_wrap .unit_text_wrap .util_price_wrap {font-size: 11px; font-weight: 500;  overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .table02 .choice_wrap .unit_text_wrap .util_price_wrap div { float: left; font-size: 11px; font-weight: 500;  overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .table02 .choice_wrap .unit_text_wrap .only_english {font-size: 13px; font-weight: 700;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .table02 .choice_wrap .unit_text_wrap .unit_status {font-size: 13px; font-weight: 700;  overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
+.orderandpay .cs_direct #layer .sub_contents .inner_padding .border-bottom {border-bottom: 1px #707070 solid;padding-bottom: 7px;padding-top: 30px;}
+
+
+
+
+
+
+
 
 /* 펀딩 ---------------*/
 /* 펀딩 in 주문서  */
 .orderandpay .funding_policy_wrap {margin-top:48px;}
 .orderandpay .funding_policy .funding_title {font-size: 13px; font-weight:700;}
-.orderandpay .funding_policy .funding_policy_text_wrap {margin-top:10px; background: #FAFAFA; padding:20px;}
+.orderandpay .funding_policy .funding_policy_text_wrap {margin-top:10px; background: #FAFAFA; padding:38px 10px;}
 .orderandpay .funding_policy_list .items {font-size: 13px; font-weight:400; line-height: 1.8;}
 
 /* 상품상세보기 */
