--- a/PC/css/new/search_modi.css
+++ b/PC/css/new/search_modi.css
@@ -51,12 +51,12 @@
 .search_modi .search_filter ul li a.on{color:#DA2128 !important;}
 .search_modi .search_filter.active .search_dp1{border-bottom:1px solid #dbdbdb;border: 0;}
 .search_modi .search_filter.on_select .search_dp1 span{position:relative;}
-.search_modi .search_filter.on_select .search_dp1 span:before{position:absolute; content:''; left:-22px; top:50%; margin-top:-4px; width:12px; height:9px; background:url('../../images/biz/common/icon_tab_active.png') no-repeat;}
+.search_modi .search_filter.on_select .search_dp1 span:before{ display:none; position:absolute; content:''; left:-22px; top:50%; margin-top:-4px; width:12px; height:9px; background:url('../../images/biz/common/icon_tab_active.png') no-repeat;}
 .search_modi .search_filter .search_dp1{position:relative;line-height: normal;display:block;font-size:18px;color:#000;text-align: left;font-weight: 700;padding: 22px 20px 10px;}
 .search_modi .search_filter.active .search_dp2{display:block;}
-.search_modi .search_filter .btn_wrapper {float: none; display:none; position: absolute;top: 14px;right: 12px;}
+/*.search_modi .search_filter .btn_wrapper {float: none; display:none; position: absolute;top: 14px;right: 12px;}
 .search_modi .search_filter.active .btn_wrapper {display: block;}
-
+*/
 .search_modi .search_filter .btn_dp2:after{position:absolute;content:'';right:0;width: 12px;top:50%;margin-top: -6px;height: 12px;background:url('../../images/new/select_depth.png') no-repeat;}
 .search_modi .search_filter .btn_dp2.on:after{background-position:-12px 0;}
 
@@ -77,17 +77,38 @@
 .search_modi .search_filter .price .input_wrap input:-ms-input-placeholder { /* Internet Explorer 10-11 */   color: #777777;}
 .search_modi .search_filter .price .input_wrap input::placeholder {   color: #777777;}
 
-.search_modi .search_filter .btn_price_search {width:26px;height:26px;background:url('../../images/new/ico_btn_search.png') no-repeat center;font-size: 0;display: block;float: left;margin-left: 5px;}
+/*.search_modi .search_filter .btn_price_search {width:26px;height:26px;background:url('../../images/new/ico_btn_search.png') no-repeat center;font-size: 0;display: block;float: left;margin-left: 5px;}
 
 .search_modi .search_filter .btn_wrapper .btn_reset {border:0;font-size: 0;padding:0;width: 26px;height: 24px;background: url('../../images/new/icon_refresh.png') no-repeat center;}
 
-/* list */
+*//* list */
 .search_modi .category_wrap .pd_unit .category_slide ul li {width:230px !important; margin-right: 10px !important; padding:0;}
 .search_modi .category_wrap .pd_unit .category_slide ul li a .thum {width:230px; height:230px;}
 
 .search_modi.search_wrapper .related_search {margin-top: 10px;}
 .search_wrapper .related_search p, .search_wrapper .related_search ul {margin-top:10px;}
 .search_modi.search_wrapper .search_top .form_checkbox {margin-top:-1px;}
+
+
+
+.search_modi .search_filter.on_select .detail{display:block;}
+.search_modi .search_filter .detail{display:none; border-top:1px solid #000; padding:18px 20px 18px 58px; height:78px; box-sizing:border-box; background:url('../../images/biz/common/icon_condition.png') 20px 50% no-repeat;}
+.search_modi .search_filter .select_condition{float:left; display:table; width:650px; height:42px;}
+.search_modi .search_filter .select_condition ul{display:table-cell; vertical-align:middle;overflow: hidden; text-overflow:ellipsis; -webkit-line-clamp:2; -webkit-box-orient:vertical;}
+.search_modi .search_filter .select_condition ul li{float:left; margin:2px 5px;}
+.search_modi .search_filter .select_condition ul li a{position:relative; padding:1px 20px 1px 0; color:#DA2128; font-size:15px; background:url('../../images/biz/common/icon_search_delete.png') 100% 50% no-repeat;}
+.search_modi .search_filter .btn_wrapper{float:right;}
+.search_modi .search_filter .btn_wrapper a{display:inline-block; font-size:16px; text-align:center; line-height:39px; box-sizing:border-box; padding:0; width:104px;}
+.search_modi .search_filter .btn_wrapper a + a{margin-left:6px;}
+.search_modi .search_filter .btn_wrapper .btn_reset{border:1px solid #000; padding-left:22px; background:url('../../images/biz/common/icon_reset.png') 20px 50% no-repeat;}
+.search_modi .search_filter .btn_wrapper .btn_black{border:1px solid #000; background-color:#000; color:#fff;}
+.search_modi .search_filter .btn_filter{position:absolute; width:60px; height:60px; background:#000; z-index:21; right:0; top:0px;}
+.search_modi .search_filter .btn_filter:after{position:absolute; content:''; width:26px; height:16px; top:50%; margin-top:-8px; left:50%; margin-left:-13px; background:url('../../images/biz/common/icon_filter_arr.png') no-repeat;}
+.search_modi .search_filter .btn_filter.active:after{background-position:-26px 0;}
+
+
+
+
 
 /* 검색하단 리스트 */
 /* 컨텐츠 안에 들어 가지 않기 때문에 클래스 넣지 않음 search_modi */
